Vision/Source/ATMCD32D.pas


    function SetExposureTime(time : Single): integer; stdcall;
    function SetNumberAccumulations(number: Integer ): integer; stdcall;
    function SetAccumulationCycleTime(time: Single ): integer; stdcall;
    function SetNumberKinetics(number: Integer ): integer; stdcall;
    function SetKineticCycleTime(time: Single ): integer; stdcall;
    function SetAcquisitionMode(mode: Integer ): integer; stdcall;
    function SetHorizontalSpeed(index: Integer ): integer; stdcall;
    function SetVerticalSpeed(index: Integer ): integer; stdcall;
    function SetReadMode(mode: Integer ): integer; stdcall;
    function SetPhotonCounting(state: Integer ): integer; stdcall;
    function SetPhotonCountingThreshold(min: Integer; max: Integer): integer; stdcall;
    function SetMultiTrack(number: Integer ; height: Integer ; offset: Integer ; var bottom: Integer ; var gap: Integer): integer; stdcall;
    function SetSingleTrack(centre: Integer ; height: Integer ): integer; stdcall;
    function SetFullImage(hbin: Integer ; vbin: Integer ): integer; stdcall;
    function GetAcquisitionTimings(var exposure: Single ; var accumulate: Single ; var kinetic: Single): integer; stdcall;
    function PrepareAcquisition(): integer; stdcall;
    function FreeInternalMemory(): integer; stdcall;
    function StartAcquisition: integer; stdcall;
    function AbortAcquisition: integer; stdcall;
    function GetAcquiredData(arr: Pointer ; size: Integer ): integer; stdcall;
    function GetStatus(var status: Integer): integer; stdcall;
    function SetTriggerMode(mode: Integer ): integer; stdcall;
    function Initialize(dir: PChar ): integer; stdcall;
    function ShutDown: integer; stdcall;
    function SetTemperature(temperature: Integer ): integer; stdcall;
    function GetTemperature(var temperature: Integer): integer; stdcall;
    function GetTemperatureF(var temperature: Single): integer; stdcall;
    function GetTemperatureRange(var mintemp: Integer; var maxtemp: Integer): integer; stdcall;
    function CoolerON: integer; stdcall;
    function CoolerOFF: integer; stdcall;
    function SetShutter(typ: Integer ; mode: Integer ; closingtime: Integer ; openingtime: Integer ): integer; stdcall;
    function OutAuxPort(port: Integer ; state: Integer ): integer; stdcall;
    function InAuxPort(port: Integer ; var state: Integer ): integer; stdcall;
    function GetNumberHorizontalSpeeds(var number: Integer ): integer; stdcall;
    function GetHorizontalSpeed(index: Integer ; speed: Integer): integer; stdcall;
    function GetNumberVerticalSpeeds(var number: Integer): integer; stdcall;
    function GetVerticalSpeed(index: Integer ; var speed: Integer): integer; stdcall;
    function GetDetector(var xpixels: Integer ; var ypixels: Integer): integer; stdcall;
    function GetImagesPerDMA(var images: Integer): integer; stdcall;
    function GetSoftwareVersion(var eprom: Integer; var coffile: Integer; var vxdrev: Integer; var vxdver: Integer; var dllrev: Integer; var dllver: Integer): integer; stdcall;
    function GetHardwareVersion(var PCB: Integer; var Decode: Integer; var SerPar: Integer; var Clocks: Integer; var dummy1: Integer; var dummy2: Integer): integer; stdcall;
    function SetImage(hbin: Integer ; vbin: Integer ; hstart: Integer ; hend: Integer ; vstart: Integer ; vend: Integer ): integer; stdcall;
    function SetUSGenomics(width: Integer ; height: Integer ): integer; stdcall;
    function SetFastKinetics(exposedRows: Integer ; seriesLength: Integer ; time: Single ; mode: Integer ; hbin: Integer ; vbin: Integer ): integer; stdcall;
    function SetFastKineticsEx(exposedRows: Integer ; seriesLength: Integer ; time: Single ; mode: Integer ; hbin: Integer ; vbin: Integer ; offset: Integer): integer; stdcall;
    function GetFKExposureTime(var time: Single): integer; stdcall;
    function GetNumberFKVShiftSpeeds(var number: Integer): integer; stdcall;
    function SetFKVShiftSpeed(index: Integer ): integer; stdcall;
    function GetFKVShiftSpeed(index: Integer ; var speed: Integer): integer; stdcall;
    function GetFKVShiftSpeedF(index: Integer ; var speed: Single): integer; stdcall;
    function SetComplexImage(numAreas: Integer ; areas: PInteger): integer; stdcall;
    function SetRandomTracks(numTracks: Integer ; areas: Integer): integer; stdcall;
    function SetDriverEvent(event: Integer): integer; stdcall;
    function I2CBurstWrite(i2cAddress: Byte; nBytes: Integer; data: PByte): integer; stdcall;
    function I2CBurstRead(i2cAddress: Byte; nBytes: Integer; data: PByte): integer; stdcall;
    function I2CReset(): integer; stdcall;
    function I2CRead(deviceID: Byte; intAddress: Byte; var pdata: Byte): integer; stdcall;
    function I2CWrite(deviceID: Byte; intAddress: Byte; data: Byte): integer; stdcall;
    function SetGain(gain: Integer ): integer; stdcall;
    function SetMCPGating(gating: Integer ): integer; stdcall;
    function SetGateMode(gatemode: Integer ): integer; stdcall;
    function SetFilterMode(mode: Integer ): integer; stdcall;
    function GetFilterMode(var mode: Integer): integer; stdcall;
    function SetFilterParameters(width: Integer ; sensitivity: Single ; range: Integer ; accept: Single ; smooth: Integer ; noise: Integer ): integer; stdcall;
    function GPIBSend(id: Integer ; address: Single ; text:PChar ): integer; stdcall;
    function GPIBReceive(id: Integer ; address: Single ; text:PChar ; size: Integer ): integer; stdcall;
    function SaveAsEDF(path:PChar ; mode: Integer ): integer; stdcall;
    function SaveAsSif(path:PChar ): integer; stdcall;
    function SaveAsCommentedSif(path: PChar; comment: PChar): integer; stdcall;
    function SaveAsTiff(path:PChar ; palette:PChar; position: Integer ; mode: Integer ): integer; stdcall;
    function SetSifComment(comment: PChar): integer; stdcall;
    function GetAvailableCameras(var totalCameras: Integer): integer; stdcall;
    function SetCurrentCamera(cameraHandle: Integer): integer; stdcall;
    function GetCurrentCamera(var cameraHandle: Integer): integer; stdcall;
    function GetCameraHandle(cameraIndex: Integer; var cameraHandle: Integer): integer; stdcall;
    function SetDelayGenerator(board: Integer ; address: Single ; typ: Integer ): integer; stdcall;
    function SetGate(delay: Single ; width: Single ; step: Single ): integer; stdcall;
    function SetSingleTrackHBin(bin: Integer ): integer; stdcall;
    function SetMultiTrackHBin(bin: Integer ): integer; stdcall;
    function SetFVBHBin(bin: Integer ): integer; stdcall;
    function SetCustomTrackHBin(bin: Integer ): integer; stdcall;
    function GetNewData(arr: PInteger; size: Integer ): integer; stdcall;
    function GetAllDMAData(arr: PInteger; size: Integer ): integer; stdcall;
    function GetDDGIOCPulses(var pulses: Integer): integer; stdcall;
    function GetDDGPulse(width:Double ; resolution:Double; var Delay:Double; var Wid:Double): integer; stdcall;
    function SetDDGAddress(t0: Byte; t1: Byte; t2: Byte; tt: Byte; address: Byte): integer; stdcall;
    function SetDDGGain(gain: Integer ): integer; stdcall;
    function SetDDGGateStep(step:Double): integer; stdcall;
    function SetDDGInsertionDelay(state: Integer ): integer; stdcall;
    function SetDDGIntelligate(state: Integer ): integer; stdcall;
    function SetDDGIOC(state: Integer ): integer; stdcall;
    function SetDDGIOCFrequency(frequency:Double): integer; stdcall;
    function SetDDGTimes(t0:Double ; t1:Double; t2:Double): integer; stdcall;
    function SetDDGTriggerMode(mode: Integer ): integer; stdcall;
    function SetDDGVariableGateStep(mode: Integer ; p1:Double; p2:Double): integer; stdcall;
    function SetEMCCDGain(gain: Integer ): integer; stdcall;
    function SaveAsBmp(path:PChar ; palette:PChar; ymin: Integer ; ymax: Integer ): integer; stdcall;
    function SaveToClipboard(palette:PChar): integer; stdcall;
    function SetSpool(active: Integer ; method: Integer ; path:PChar ; framebuffersize: Integer ): integer; stdcall;
    function SetFastExtTrigger(mode: Integer ): integer; stdcall;
    function GetAcquisitionProgress(var acc: Integer; var series: Integer): integer; stdcall;
    function Merge(arr: PInteger; nOrder: Integer; nPoint: Integer; nPixel: Integer; coeff: PSingle; fit: Integer; hbin: Integer; output: PInteger; var start: Single; var step: Single): integer; stdcall;
    function GetNumberADChannels(var channels: Integer): integer; stdcall;
    function SetADChannel(channel: Integer): integer; stdcall;
    function GetNumberHSSpeeds(channel: Integer; typ: Integer; var speeds: Integer): integer; stdcall;
    function GetHSSpeed(channel: Integer; typ: Integer; index: Integer; var speed: Single): integer; stdcall;
    function SetHSSpeed(typ: Integer; index: Integer): integer; stdcall;
    function GetNumberVSSpeeds(var speeds: Integer): integer; stdcall;
    function GetVSSpeed(index: Integer; var speed: Single): integer; stdcall;
    function SetVSSpeed(index: Integer): integer; stdcall;
    function SetVSAmplitude(index: Integer): integer; stdcall;
    function SetFanMode(mode: Integer): integer; stdcall;
    function GetNumberAmp(var amp: Integer): integer; stdcall;
    function GetAmpMaxSpeed(index: Integer; var speed: Single): integer; stdcall;
    function GetAmpDesc(index: Integer; name: PChar; len: Integer): integer; stdcall;
    function SetVerticalRowBuffer(rows: Integer): integer; stdcall;
    function GetRegisterDump(var mode: Integer): integer; stdcall;
    function SetRegisterDump(mode: Integer): integer; stdcall;
    function GetCameraSerialNumber(var number: Integer): integer; stdcall;
    function GetPixelSize(var xSize: Single; var ySize: Single): integer; stdcall;
    function GetHeadModel(name: PChar): integer; stdcall;
    function GetNewData16(arr: PWord; size: Integer): integer; stdcall;
    function GetAcquiredData16(arr: PWord; size: Integer): integer; stdcall;
    function GetNewData8(arr: PByte; size: Integer): integer; stdcall;
    function GetCapabilities(caps: Pointer): integer; stdcall;
    function SetMessageWindow(wnd: Integer): integer; stdcall;
    function SelectDevice(devNum: Integer): integer; stdcall;
    function GetNumberDevices(var numDevs: Integer): integer; stdcall;
    function GetID(devNum: Integer; var id: Integer): integer; stdcall;
    function SetPixelMode(bitdepth: Integer; colorMode: Integer): integer; stdcall;
    function IdAndorDll(): integer; stdcall;
    function SetAcquisitionType(typ: Integer): integer; stdcall;
    function SetDataType(typ: Integer): integer; stdcall;
    function SetBackground(arr: PInteger; size: Integer): integer; stdcall;
    function GetBackground(arr: PInteger; size: Integer): integer; stdcall;
    function GetAcquiredFloatData(arr: PSingle; size: Integer): integer; stdcall;
    function GetNewFloatData(arr: PSingle; size: Integer): integer; stdcall;
    function SetBaselineClamp(state: Integer): integer; stdcall;
    function SetHighCapacity(state: Integer): integer; stdcall;
    function SetOutputAmplifier(type2: Integer): integer; stdcall;
    function GetNumberPreAmpGains(var noGains: Integer): integer; stdcall;
    function GetPreAmpGain(index2: Integer; var gain: Single): integer; stdcall;
    function SetPreAmpGain(index: Integer): integer; stdcall;
    function SetUserEvent(event: Integer): integer; stdcall;
    function SetStorageMode(mode: Integer): integer; stdcall;
    function SetNextAddress(arr: Pointer; lowAdd: Integer; highAdd: Integer; len: Integer; physical: Integer): integer; stdcall;    
    function UnMapPhysicalAddress: integer; stdcall;
    function SetNextAddress16(arr: Pointer; lowAdd: Integer; highAdd: Integer; len: Integer; physical: Integer): integer; stdcall;    
    function GetSpoolProgress(var index: Integer): integer; stdcall;
    function GetTotalNumberImagesAcquired(var index: Integer): integer; stdcall;
    function GetSizeOfCircularBuffer(var index: Integer): integer; stdcall;
